Bug 203859 - Deleted address book reappear after an exit/restart Bug 203945 - Type down in compose window very slow resulting in very slow auto complete r/sr/a=sspitzer